force-app/main/default/objects/Empresa_x_Empleado__c/Empresa_x_Empleado__c.object-meta.xml
<CustomObject>
    <label>Empleado por Empresa</label>
    <nameField>
        <displayFormat>EE-{0000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empleado por Empresa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>