force-app/main/default/objects/Empresa_x_Empleado__c/fields/Activo_Nueva_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Activo_Nueva_Planilla__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo Nueva Planilla</label>
    <type>Checkbox</type>
</CustomField>