force-app/main/default/objects/Empresa_x_Empleado__c/fields/Eliminado__c.field-meta.xml
<CustomField>
    <fullName>Eliminado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eliminado</label>
    <type>Checkbox</type>
</CustomField>