force-app/main/default/objects/Empresa_x_Empleado__c/fields/Empleado2__c.field-meta.xml
<CustomField>
    <fullName>Empleado2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Empleado_X_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>