force-app/main/default/objects/Empresa_x_Empleado__c/fields/Empresa2__c.field-meta.xml
<CustomField>
    <fullName>Empresa2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Empleado_X_Empresa1</relationshipName>
    <type>Lookup</type>
</CustomField>