force-app/main/default/objects/Empresa_x_Empleado__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Despedido</fullName>
            </value>
            <value>
                <fullName>De baja</fullName>
                <isActive>false</isActive>
                <label>De baja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>