force-app/main/default/objects/Empresa_x_Empleado__c/fields/Fecha_despido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_despido__c</fullName>
    <label>Fecha de despido</label>
    <type>Date</type>
</CustomField>