force-app/main/default/objects/Empresa_x_Empleado__c/fields/Id_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Id_Formulario__c</fullName>
    <displayFormat>SF{000000000}</displayFormat>
    <label>Id Formulario</label>
    <type>AutoNumber</type>
</CustomField>