force-app/main/default/objects/Empresa_x_Empleado__c/fields/Motivo_despido__c.field-meta.xml
<CustomField>
    <fullName>Motivo_despido__c</fullName>
    <label>Motivo de despido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ya no labora en la empresa</fullName>
            </value>
            <value>
                <fullName>Maternidad</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>