force-app/main/default/objects/Empresa_x_Empleado__c/fields/Salario__c.field-meta.xml
<CustomField>
    <fullName>Salario__c</fullName>
    <label>Salario</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>