force-app/main/default/objects/Empresa_x_Empleado__c/fields/Ultima_modificacion__c.field-meta.xml
<CustomField>
    <fullName>Ultima_modificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultima modificación</label>
    <referenceTo>Usuario_Portal_Empresarial__c</referenceTo>
    <relationshipLabel>Empleado por Empresa</relationshipLabel>
    <relationshipName>Empleado_por_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>