force-app/main/default/objects/Empresa_x_Empleado__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Empleado2__c</columns>
    <columns>Empresa2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empresa2__c</field>
        <operation>contains</operation>
        <value>CASH</value>
    </filters>
    <label>Todos</label>
</ListView>